# vm-pop3d-cc

./: AUTHORS  CHANGES  FAQ  INSTALL  Makefile.in  README  TODO  apop.c  auth.c  capa.c  config.h  config.h.in  configure.in  dele.c  extra.c  getopt.c  getopt.h  getopt1.c  list.c  md5.c  md5.h  noop.c  options.c  quit.c  retr.c  rset.c  stat.c  top.c  uidl.c  user.c  virtual.c  vm-pop3d.8  vm-pop3d.c  vm-pop3d.h  vm-pop3d.init  vm-pop3d.spec
RFC/: RFC1081.txt  RFC1225.txt
